--- a/index.html
+++ b/index.html
@@ -2,16 +2,15 @@
 <html>
 
 <head>
-        <title>Mindmap-Epitech</title>
-        <link rel="stylesheet" href="mindmap/css/style.css">
+    <title>Mindmap-Epitech</title>
+    <link rel="stylesheet" href="rest.css">
+    <link rel="stylesheet" href="mindmap/css/style.css">
 </head>
 
 <body>
-    <div id="page">
-
-       
-        
+    <div style="width: 100vw; height: 100vh" id="page">
     </div>
+
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
     <script src="mindmap/main.js"></script>
@@ -20,4 +19,5 @@
         $("#page").mindMap();
     </script>
 </body>
+
 </html>
